if(NOT TARGET ixwebsocket::ixwebsocket)
  find_package(ixwebsocket QUIET)
  if(JSONRPCCXX_ALLOW_FETCHING)
    include(FetchContent)
    FetchContent_Declare(ixwebsocket GIT_REPOSITORY https://github.com/machinezone/IXWebSocket.git GIT_TAG v11.4.6)
    FetchContent_MakeAvailable(ixwebsocket)
  endif()
endif()

if(NOT TARGET httplib::httplib)
  find_package(httplib QUIET)
  if(JSONRPCCXX_ALLOW_FETCHING)
    include(FetchContent)
    FetchContent_Declare(httplib GIT_REPOSITORY https://github.com/yhirose/cpp-httplib.git GIT_TAG v0.37.1)
    FetchContent_MakeAvailable(httplib)
  endif()
endif()

add_executable(example-warehouse-inmemory warehouse/memory.cpp warehouse/warehouseapp.cpp warehouse/types.h inmemoryconnector.hpp)
#target_compile_options(example-warehouse-inmemory PUBLIC "${_warning_opts}")
target_link_libraries(example-warehouse-inmemory PRIVATE json-rpc-cxx::json-rpc-cxx)
target_include_directories(example-warehouse-inmemory PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")
add_test(NAME example-warehouse-inmemory COMMAND example-warehouse-inmemory)

add_executable(example-warehouse-http warehouse/http.cpp warehouse/warehouseapp.cpp warehouse/types.h inmemoryconnector.hpp)
#target_compile_options(example-warehouse-http PUBLIC "${_warning_opts}")
target_link_libraries(example-warehouse-http PRIVATE json-rpc-cxx::json-rpc-cxx httplib::httplib)
target_include_directories(example-warehouse-http PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")
add_test(NAME example-warehouse-http COMMAND example-warehouse-http)

add_executable(example-warehouse-websocket warehouse/websocket.cpp warehouse/warehouseapp.cpp warehouse/types.h inmemoryconnector.hpp)
#target_compile_options(example-warehouse-websocket PUBLIC "${_warning_opts}")
target_link_libraries(example-warehouse-websocket PRIVATE json-rpc-cxx::json-rpc-cxx ixwebsocket::ixwebsocket)
target_include_directories(example-warehouse-websocket PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")
add_test(NAME example-warehouse-websocket COMMAND example-warehouse-http)